--- a/style.css
+++ b/style.css
@@ -622,7 +622,8 @@
 
     .footer ul {
         margin-top: 5%;
-        width: 40%;
+        width: 20%;
+        font-size: 12px;
     }
 }
 
@@ -703,6 +704,7 @@
     .footer ul {
         margin-top: 5%;
         width: 40%;
+        font-size: 18px;
     }
 }
 
